# Simple-Gemeni-With-FastApi-With-Front-End

backend/: .envbackup  mypy.ini  pyproject.toml
backend/chatbot/: app.py  gemeni_settings.py  routes.py
backend/database/: db.py
backend/models/: chatbot_model.py
front-end/: package-lock.json
front-end/src/app/: page.tsx
front-end/src/components/: DeleteChats.tsx  Prompt.tsx
front-end/src/components/constant/: index.ts
