[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["azfarmasood <azfarmasood22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-generativeai = "^0.5.2"
fastapi = "^0.110.2"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
